

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTipInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn20Percent"
        android:layout_alignLeft="@+id/btn10percent"
        android:layout_alignRight="@+id/btn20Percent"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp">
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/btn20Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn20PercentValueString"
            />

        <Button
            android:id="@+id/btn15Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn15PercentValueString"
            />

        <Button
            android:id="@+id/btn10percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn10PercentValueString"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tvOverallCostDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTotalDescriptionString"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOverallValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:hint="@string/tvUnknownValueString"
            android:textAppearance="?android:attr/textAppearanceLarge"
           />

    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tvFinalTipDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFinalTipDescriptionString"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFinalTipValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:hint="@string/tvUnknownValueString"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/btnClearInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClearInputString"
        />

</LinearLayout>
